Update HSL city bike rides.ipynb

--- a/HSL city bike rides.ipynb
+++ b/HSL city bike rides.ipynb
@@ -6194,7 +6194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018e4a11",
+   "id": "8aedc179",
    "metadata": {},
    "source": [
     "If the above interactive visualization is asking to Trust the notebook and downloading the notebook locally is not an option, here is a sample picture of the generated visual:"
@@ -6202,10 +6202,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73246786",
+   "id": "ba3a9f6c",
    "metadata": {},
    "source": [
-    "![](https://github.com/Khardos/Portfolio/blob/main/City_bike_rides.PNG)"
+    "![](City_bike_rides.PNG)"
    ]
   },
   {
